force-app/main/default/objects/Developer_Program_Application__c/Developer_Program_Application__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Program Application</label>
    <nameField>
        <displayFormat>DEV-APP-{0000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Program Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>