force-app/main/default/objects/Developer_Program_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>This field will store the status of a developer program application provided by the API from the source (in this case, DevZone).</description>
    <label>Application Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>