force-app/main/default/objects/Developer_Program_Application__c/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <label>Application Submitted Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>