force-app/main/default/objects/Developer_Program_Application__c/fields/Application_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Updated_Date__c</fullName>
    <description>This field will store the last updated date of a developer program application provided by the API from the source (in this case, DevZone).</description>
    <label>Application Updated Date</label>
    <type>DateTime</type>
</CustomField>