force-app/main/default/objects/Developer_Program_Application__c/fields/Computational_Languages__c.field-meta.xml
<CustomField>
    <fullName>Computational_Languages__c</fullName>
    <label>Computational Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>F#</fullName>
            </value>
            <value>
                <fullName>Fortran</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>LabVIEW</fullName>
            </value>
            <value>
                <fullName>Matlab</fullName>
            </value>
            <value>
                <fullName>Perl</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>Visual Basic</fullName>
            </value>
            <value>
                <fullName>Other (please explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>