force-app/main/default/objects/Developer_Program_Application__c/fields/Dev_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dev_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev Contact</label>
    <referenceTo>Dev_Contact__c</referenceTo>
    <relationshipLabel>Dev Program Applications</relationshipLabel>
    <relationshipName>Dev_Program_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>