force-app/main/default/objects/Developer_Program_Application__c/fields/Developer_Program__c.field-meta.xml
<CustomField>
    <fullName>Developer_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Developer Program</label>
    <referenceTo>Developer_Program__c</referenceTo>
    <relationshipLabel>Developer Program Applications</relationshipLabel>
    <relationshipName>Developer_Program_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>