force-app/main/default/objects/Developer_Program_Application__c/fields/GPU_Acceleration_API_Languages__c.field-meta.xml
<CustomField>
    <fullName>GPU_Acceleration_API_Languages__c</fullName>
    <label>GPU Acceleration API / Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anaconda</fullName>
            </value>
            <value>
                <fullName>CUDA C</fullName>
            </value>
            <value>
                <fullName>CUDA C++</fullName>
            </value>
            <value>
                <fullName>CUDA Fortran</fullName>
            </value>
            <value>
                <fullName>C++ AMP</fullName>
            </value>
            <value>
                <fullName>Cg</fullName>
            </value>
            <value>
                <fullName>Direct3D / HLSL</fullName>
            </value>
            <value>
                <fullName>DirectCompute</fullName>
            </value>
            <value>
                <fullName>jCUDA</fullName>
            </value>
            <value>
                <fullName>MPI</fullName>
            </value>
            <value>
                <fullName>OpenACC</fullName>
            </value>
            <value>
                <fullName>OpenCL</fullName>
            </value>
            <value>
                <fullName>OpenGL / GLSL</fullName>
            </value>
            <value>
                <fullName>OpenGL-Compute</fullName>
            </value>
            <value>
                <fullName>OpenMP</fullName>
            </value>
            <value>
                <fullName>PTX</fullName>
            </value>
            <value>
                <fullName>R+CUDA</fullName>
            </value>
            <value>
                <fullName>Vulkan</fullName>
            </value>
            <value>
                <fullName>Other (please explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>