force-app/main/default/objects/Developer_Program_Application__c/fields/Graphics_API__c.field-meta.xml
<CustomField>
    <fullName>Graphics_API__c</fullName>
    <label>Graphics API</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>OpenGL</fullName>
            </value>
            <value>
                <fullName>Direct3D</fullName>
            </value>
            <value>
                <fullName>CgFX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>