force-app/main/default/objects/Developer_Program_Application__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <label>Hardware</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Server/Cluster</fullName>
            </value>
            <value>
                <fullName>Desktop and Notebook</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>Embedded/Handheld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>