force-app/main/default/objects/Developer_Program_Application__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry Segment/Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Development Tools &amp; Libraries</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Economics</fullName>
            </value>
            <value>
                <fullName>Games</fullName>
            </value>
            <value>
                <fullName>Government / National Labs</fullName>
            </value>
            <value>
                <fullName>Higher Education / Academia</fullName>
            </value>
            <value>
                <fullName>Internet / Communications</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Medical &amp; LifeSciences</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>