force-app/main/default/objects/Developer_Program_Application__c/fields/Libraries__c.field-meta.xml
<CustomField>
    <fullName>Libraries__c</fullName>
    <label>Libraries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>