force-app/main/default/objects/Developer_Program_Application__c/fields/NVIDIA_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Campaign_ID__c</fullName>
    <label>NVIDIA Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>