force-app/main/default/objects/Developer_Program_Application__c/fields/Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Operating_Systems__c</fullName>
    <label>Operating Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Linux - 32 bit</fullName>
            </value>
            <value>
                <fullName>Linux - 64 bit</fullName>
            </value>
            <value>
                <fullName>Mac OSX</fullName>
            </value>
            <value>
                <fullName>Win 7</fullName>
            </value>
            <value>
                <fullName>Win 7 - 32 bit</fullName>
            </value>
            <value>
                <fullName>Win 7 - 64 bit</fullName>
            </value>
            <value>
                <fullName>Win 8</fullName>
            </value>
            <value>
                <fullName>Win 8 - 32 bit</fullName>
            </value>
            <value>
                <fullName>Win 8 - 64 bit</fullName>
            </value>
            <value>
                <fullName>Win 10</fullName>
            </value>
            <value>
                <fullName>WinRT</fullName>
            </value>
            <value>
                <fullName>Win Vista</fullName>
            </value>
            <value>
                <fullName>Win Vista - 32 bit</fullName>
            </value>
            <value>
                <fullName>Win Vista - 64 bit</fullName>
            </value>
            <value>
                <fullName>Win XP</fullName>
            </value>
            <value>
                <fullName>Win XP - 32 bit</fullName>
            </value>
            <value>
                <fullName>Win XP - 64 bit</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>