force-app/main/default/objects/Developer_Program_Application__c/fields/Other_Computational_Languages__c.field-meta.xml
<CustomField>
    <fullName>Other_Computational_Languages__c</fullName>
    <label>Other Computational Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>