force-app/main/default/objects/Developer_Program_Application__c/fields/Other_Field_s_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Other_Field_s_of_Interest__c</fullName>
    <label>Other Field(s) of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>