force-app/main/default/objects/Developer_Program_Application__c/fields/Other_GPU_Acceleration_API_Languages__c.field-meta.xml
<CustomField>
    <fullName>Other_GPU_Acceleration_API_Languages__c</fullName>
    <label>Other GPU Acceleration API / Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>