force-app/main/default/objects/Developer_Program_Application__c/fields/Other_Industry__c.field-meta.xml
<CustomField>
    <fullName>Other_Industry__c</fullName>
    <label>Other Industry Segment/Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>