force-app/main/default/objects/Developer_Program_Application__c/fields/Other_Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Other_Operating_Systems__c</fullName>
    <label>Other Operating Systems</label>
    <length>255</length>
    <type>Text</type>
</CustomField>