force-app/main/default/objects/Developer_Program_Application__c/fields/Other_Target_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Other_Target_Platforms__c</fullName>
    <label>Other Target Platforms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>