force-app/main/default/objects/Developer_Program_Application__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>Project Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>