force-app/main/default/objects/Developer_Program_Application__c/fields/Reported_Company__c.field-meta.xml
<CustomField>
    <fullName>Reported_Company__c</fullName>
    <inlineHelpText>Enter the name of the company reported by developer</inlineHelpText>
    <label>Reported Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>