force-app/main/default/objects/Developer_Program_Application__c/fields/Source_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Application_ID__c</fullName>
    <label>Source Application ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>