force-app/main/default/objects/Developer_Program_Application__c/fields/User_Provided_Organization__c.field-meta.xml
<CustomField>
    <fullName>User_Provided_Organization__c</fullName>
    <label>User Provided Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>