force-app/main/default/objects/Developer_Program_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Submitted_Date__c</columns>
    <columns>User_Provided_Organization__c</columns>
    <columns>Developer_Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>